--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,13 +8,16 @@
     <h1>Main Page</h1>
 
     <div>
-        <a href="member/join">
+        <a class="btn btn-outline btn-warning" href="member/join">
             <h3>회원가입</h3>
         </a>
-        <a href="/cafe/create">
+        <a class="btn btn-outline btn-primary" href="/member/login">
+            <h3>로그인</h3>
+        </a>
+        <a class="btn btn-outline btn-success" href="/cafe/create">
             <h3>카페 만들기</h3>
         </a>
-        <a href="#">
+        <a class="btn btn-outline btn-info" href="#">
             <h3>게시물 작성하기</h3>
         </a>
     </div>
