--- a/src/main/resources/templates/view/member/joinForm.html
+++ b/src/main/resources/templates/view/member/joinForm.html
@@ -33,7 +33,7 @@
             </div>
             <div class="flex justify-center">
                 <button class="w-36 btn btn-outline" type="submit">가입 완료</button>
-                <a class="ml-10 w-36 btn btn-outline btn-warning" href="/">가입 취소</a>
+                <a class="ml-10 w-36 btn btn-outline btn-warning" href="/static">가입 취소</a>
             </div>
         </div>
 
