--- a/src/main/resources/templates/view/member/loginForm.html
+++ b/src/main/resources/templates/view/member/loginForm.html
@@ -27,7 +27,7 @@
 
             <div class="flex justify-center">
                 <button class="w-36 btn btn-outline" type="submit">로그인 하기</button>
-                <a class="ml-10 w-36 btn btn-outline btn-warning" href="/">로그인 취소</a>
+                <a class="ml-10 w-36 btn btn-outline btn-warning" href="/static">로그인 취소</a>
             </div>
         </div>
 
