--- a/src/main/resources/templates/view/cafe/createForm.html
+++ b/src/main/resources/templates/view/cafe/createForm.html
@@ -1,74 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<html layout:decorate="~{common/layout/defaultLayout.html}" xmlns:layout="" data-theme="corporate">
 <head>
-    <meta charset="UTF-8">
+    <th:block th:replace="~{common/fragments/config :: ConfigFragment}"/>
     <title>Create Cafe</title>
-
-    <!-- 데이지 UI 불러오기 -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" type="text/css"/>
-    <!-- 테일윈드 불러오기 -->
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<form method="post" action="/cafe/create" class="flex justify-center">
-    <div class="flex flex-col w-2/3 justify-center m-10">
-        <span class="mt-10 w-48">카페명</span>
-        <input class="input input-bordered" type="text" name="cafeName">
+<main layout:fragment="Content">
+    <form method="post" action="/cafe/create" class="flex justify-center">
+        <div class="flex flex-col w-2/3 justify-center m-10">
+            <span class="mt-10 w-48">카페명</span>
+            <input class="input input-bordered" type="text" name="cafeName">
 
-        <span class="mt-10 inline-flex w-48">카페 소개</span>
-        <textarea placeholder="카페를 소개해 주세요." name="introduction"
-                  class="textarea textarea-bordered textarea-lg w-full"></textarea>
+            <span class="mt-10 inline-flex w-48">카페 소개</span>
+            <textarea placeholder="카페를 소개해 주세요." name="introduction"
+                      class="textarea textarea-bordered textarea-lg w-full"></textarea>
 
-        <div class="mt-10 outline">
-            <span class="mt-4 ml-8 inline-flex w-48">카페 공개 여부</span>
-            <div class="divider h-min"></div>
-            <label class="label cursor-pointer">
-                <span class="m-2 label-text">공개</span>
-                <input type="radio" name="openType" class="radio checked:bg-red-500" value="PUBLIC" checked />
-            </label>
+            <div class="mt-10 outline">
+                <span class="mt-4 ml-8 inline-flex w-48">카페 공개 여부</span>
+                <div class="divider h-min"></div>
+                <label class="label cursor-pointer">
+                    <span class="m-2 label-text">공개</span>
+                    <input type="radio" name="openType" class="radio checked:bg-red-500" value="PUBLIC" checked/>
+                </label>
 
-            <label class="label cursor-pointer">
-                <span class="m-2 label-text">비공개</span>
-                <input type="radio" name="openType" class="radio checked:bg-blue-500" value="PRIVATE" />
-            </label>
-        </div>
-
-        <div class="mt-10 outline">
-            <span class="mt-4 ml-8 inline-flex w-48">카페 이름 설정</span>
-            <div class="divider h-min"></div>
-            <label class="m-2 label cursor-pointer">
-                <span class="label-text">닉네임</span>
-                <input type="radio" name="nameType" class="radio checked:bg-green-500" value="NICK_NAME" checked />
-            </label>
-
-            <label class="m-2 label cursor-pointer">
-                <span class="label-text">실명제</span>
-                <input type="radio" name="nameType" class="radio checked:bg-yellow-500" value="REAL_NAME" />
-            </label>
-        </div>
-
-        <div class="mt-10">
-            <label>
-                <span class="mt-10 inline-flex w-48">카페 주제</span>
-                <select class="select select-info w-full max-w-xs" name="subject">
-                    <option disabled selected>카페 주제</option>
-                    <option value="TRAVEL">여행</option>
-                    <option value="FOOD">음식</option>
-                    <option value="STUDY">공부</option>
-                </select>
-            </label>
-
-        </div>
-
-        <div class="mt-10 flex flex-col">
-            <div class="flex justify-center">
-                <button class="w-36 btn btn-outline" type="submit">카페 생성</button>
-                <a class="ml-10 w-36 btn btn-outline btn-warning" href="/">생성 취소</a>
+                <label class="label cursor-pointer">
+                    <span class="m-2 label-text">비공개</span>
+                    <input type="radio" name="openType" class="radio checked:bg-blue-500" value="PRIVATE"/>
+                </label>
             </div>
+
+            <div class="mt-10 outline">
+                <span class="mt-4 ml-8 inline-flex w-48">카페 이름 설정</span>
+                <div class="divider h-min"></div>
+                <label class="m-2 label cursor-pointer">
+                    <span class="label-text">닉네임</span>
+                    <input type="radio" name="nameType" class="radio checked:bg-green-500" value="NICK_NAME"
+                           checked/>
+                </label>
+
+                <label class="m-2 label cursor-pointer">
+                    <span class="label-text">실명제</span>
+                    <input type="radio" name="nameType" class="radio checked:bg-yellow-500" value="REAL_NAME"/>
+                </label>
+            </div>
+
+            <div class="mt-10">
+                <label>
+                    <span class="mt-10 inline-flex w-48">카페 주제</span>
+                    <select class="select select-info w-full max-w-xs" name="subject">
+                        <option disabled selected>카페 주제</option>
+                        <option value="TRAVEL">여행</option>
+                        <option value="FOOD">음식</option>
+                        <option value="STUDY">공부</option>
+                    </select>
+                </label>
+
+            </div>
+
+            <div class="mt-10 flex flex-col">
+                <div class="flex justify-center">
+                    <button class="w-36 btn btn-outline" type="submit">카페 생성</button>
+                    <a class="ml-10 w-36 btn btn-outline btn-warning" href="/">생성 취소</a>
+                </div>
+            </div>
+
         </div>
+    </form>
 
-    </div>
-</form>
-
+</main>
 </body>
 </html>
