--- a/src/main/resources/templates/view/member/joinForm.html
+++ b/src/main/resources/templates/view/member/joinForm.html
@@ -1,44 +1,36 @@
-<!DOCTYPE html>
-<html>
+<html layout:decorate="~{common/layout/defaultLayout.html}" xmlns:layout="" data-theme="corporate">
 <head>
-    <meta charset="UTF-8">
+    <th:block th:replace="~{common/fragments/config :: ConfigFragment}"/>
     <title>회원가입</title>
-
-    <!-- 데이지 UI 불러오기 -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" type="text/css"/>
-    <!-- 테일윈드 불러오기 -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
 <body>
+<main layout:fragment="Content">
+    <form method="post" action="/member/join" class="flex justify-center"
+          th:object="${memberJoinForm}">
+        <div class="flex flex-col w-2/3 justify-center m-10">
+            <span class="w-48">아이디</span>
+            <input class="input input-bordered" type="text" name="loginId">
 
-<form method="post" action="/member/join" class="flex justify-center"
-      th:object="${memberJoinForm}">
-    <div class="flex flex-col w-2/3 justify-center m-10">
-        <span class="w-48">아이디</span>
-        <input class="input input-bordered" type="text" name="loginId">
+            <span class="inline-flex w-48">비밀번호</span>
+            <input class="input input-bordered" type="password" name="password1">
 
-        <span class="inline-flex w-48">비밀번호</span>
-        <input class="input input-bordered" type="password" name="password1">
+            <span class="inline-flex w-48">비밀번호 확인</span>
+            <input class="input input-bordered" type="password" name="password2">
 
-        <span class="inline-flex w-48">비밀번호 확인</span>
-        <input class="input input-bordered" type="password" name="password2">
+            <span class="inline-flex w-48">닉네임</span>
+            <input class="input input-bordered" type="text" name="nickname">
 
-        <span class="inline-flex w-48">닉네임</span>
-        <input class="input input-bordered" type="text" name="nickname">
-
-        <div class="mt-10 flex flex-col">
-            <div class="flex justify-center mt-8 mb-8" th:if="${#fields.hasErrors()}">
-                <h5 id="error" th:text="${#fields.errors()}" class="error-text"></h5>
-            </div>
-            <div class="flex justify-center">
-                <button class="w-36 btn btn-outline" type="submit">가입 완료</button>
-                <a class="ml-10 w-36 btn btn-outline btn-warning" href="/">가입 취소</a>
+            <div class="mt-10 flex flex-col">
+                <div class="flex justify-center mt-8 mb-8" th:if="${#fields.hasErrors()}">
+                    <h5 id="error" th:text="${#fields.errors()}" class="error-text"></h5>
+                </div>
+                <div class="flex justify-center">
+                    <button class="w-36 btn btn-outline" type="submit">가입 완료</button>
+                    <a class="ml-10 w-36 btn btn-outline btn-warning" href="/">가입 취소</a>
+                </div>
             </div>
         </div>
-
-    </div>
-</form>
-
+    </form>
+</main>
 </body>
 </html>
