--- a/src/main/resources/templates/common/fragments/header.html
+++ b/src/main/resources/templates/common/fragments/header.html
@@ -1,5 +1,5 @@
 <th:block th:fragment="HeaderFragment">
-    <div class="navbar bg-base-100">
+    <div class="flex content-start navbar bg-base-100">
         <div class="flex-none">
             <button class="btn btn-square btn-ghost">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -10,7 +10,7 @@
             </button>
         </div>
         <div class="flex-1">
-            <a class="btn btn-ghost normal-case text-xl">MyCafe</a>
+            <a href="/" class="btn btn-ghost normal-case text-xl">MyCafe</a>
         </div>
         <div class="flex-none">
             <div class="flex justify-center" sec:authorize="!isAuthenticated()">
