--- a/src/main/resources/templates/view/member/joinForm.html
+++ b/src/main/resources/templates/view/member/joinForm.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <th:block th:replace="~{common/fragments/header :: HeaderFragment}"/>
-<main class="flex content-center">
+<main class="flex content-center justify-center">
     <form method="post" action="/member/join" class="flex justify-center"
           th:object="${memberJoinForm}">
         <div class="flex flex-col w-2/3 justify-center m-10">
