--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -10,7 +10,7 @@
         <h3 class="font-sans text-3xl font-bold">아직 아무 카페도 없어요!</h3>
     </div>
 
-    <div th:if="${cafeList}">
+    <div th:unless="${#lists.isEmpty(cafeList)}">
         <div class="flex justify-center">
             <p class="font-sans text-3xl font-bold">카페 리스트</p>
         </div>
