--- a/src/main/resources/templates/view/member/loginForm.html
+++ b/src/main/resources/templates/view/member/loginForm.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <th:block th:replace="~{common/fragments/header :: HeaderFragment}"/>
-<main class="flex content-center">
+<main class="flex content-center justify-center">
     <form method="post" action="/member/login" class="flex justify-center">
         <div class="flex flex-col w-2/3 justify-center m-10">
             <span class="w-48">아이디</span>
