fix: writer none error

--- a/src/main/resources/templates/common/fragments/header.html
+++ b/src/main/resources/templates/common/fragments/header.html
@@ -1,5 +1,5 @@
 <th:block th:fragment="HeaderFragment">
-    <div class="flex content-start navbar bg-base-100">
+    <div class="flex flex-grow-0 content-start navbar bg-base-100">
         <div class="flex-none">
             <button class="btn btn-square btn-ghost">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
