--- a/src/main/resources/templates/view/cafe/cafeDetail.html
+++ b/src/main/resources/templates/view/cafe/cafeDetail.html
@@ -5,13 +5,23 @@
 </head>
 <body>
 <th:block th:replace="~{common/fragments/header :: HeaderFragment}"/>
-<main class="flex content-center justify-center">
-
-    <div class="hero bg-base-200">
+<main class="flex flex-col content-center justify-center">
+    <div class="py-10 flex justify-center hero bg-base-200">
         <div class="hero-content flex-col lg:flex-row-reverse">
-            <div>
+            <div class="flex flex-col">
                 <h1 class="text-5xl font-bold" th:text="${cafe.cafeName}"></h1>
                 <p class="py-6" th:text="${cafe.introduction}"></p>
+                <div class="card-actions justify-center mb-4">
+                    <div class="badge badge-outline"
+                         th:text="${cafe.isOpen.getState() == 'public' ? '공개' : '비공개'}"></div>
+                    <div class="badge badge-outline"
+                         th:text="${cafe.nameType.getNameType() == 'nickname' ? '닉네임' : '실명제'}"></div>
+                    <div class="badge badge-outline" th:switch="${cafe.subject.getSubject()}">
+                        <span th:case="'travel'">여행</span>
+                        <span th:case="'food'">음식</span>
+                        <span th:case="'study'">공부</span>
+                    </div>
+                </div>
 
                 <!-- FIXME 로그인시에만 가입하기 버튼 보여야함-->
                 <div th:unless="${isJoin}">
@@ -27,6 +37,29 @@
             <div>
                 <img src="https://kr.object.ncloudstorage.com/calocheck/sample/sample_img_no.png"
                      class="w-2/3 rounded-lg shadow-2xl"/>
+            </div>
+        </div>
+    </div>
+
+    <div class="flex flex-col" th:if="${#lists.isEmpty(postList)}">
+        <h1>아직 카페에 게시글이 하나도 없습니다!</h1>
+    </div>
+
+    <div class="flex flex-col my-10" th:unless="${#lists.isEmpty(postList)}">
+        <div class="flex justify-center my-4">
+            <p class="font-sans text-3xl font-bold">게시글 리스트</p>
+        </div>
+        <div class="ml-10 mb-10 grid grid-cols-1 md:grid-cols-3 xl:grid-cols-3 gap-[30px]" >
+            <div th:each="post:${postList}" class="card w-72 bg-neutral text-neutral-content">
+                <div class="card-body items-center text-center">
+                    <h2 class="card-title" th:text="${post.postTitle}"></h2>
+                    <div class="card-actions justify-end">
+                        <a class="btn btn-primary" th:href="|/post/detail?id=${post.id}|">보러가기</a>
+                        <a class="btn btn-error" href="#">
+                            <i class="fa-regular fa-heart"></i>좋아요
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
