--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -5,7 +5,32 @@
 </head>
 <body>
 <th:block th:replace="~{common/fragments/header :: HeaderFragment}"/>
-<main class="flex content-center justify-center">
+<main class="flex flex-col content-center justify-center">
+    <div class="flex justify-center h-1/2">
+        <div class="carousel w-2/3">
+            <div id="item1" class="carousel-item w-full">
+                <img src="/img/cafe.jpg" class="w-full" />
+            </div>
+            <div id="item2" class="carousel-item w-full">
+                <img src="/img/study.jpg" class="w-full" />
+            </div>
+            <div id="item3" class="carousel-item w-full">
+                <img src="/img/travel.jpg" class="w-full" />
+            </div>
+            <div id="item4" class="carousel-item w-full">
+                <img src="/img/hologram.jpg" class="w-full">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="flex justify-center w-full py-2 gap-2">
+        <a href="#item1" class="btn btn-xs btn-neutral">1</a>
+        <a href="#item2" class="btn btn-xs btn-neutral">2</a>
+        <a href="#item3" class="btn btn-xs btn-neutral">3</a>
+        <a href="#item4" class="btn btn-xs btn-neutral">4</a>
+    </div>
+
     <div class="flex justify-center" th:if="${#lists.isEmpty(cafeList)}">
         <h3 class="font-sans text-3xl font-bold">아직 아무 카페도 없어요!</h3>
     </div>
