--- a/src/main/resources/templates/view/cafe/cafeDetail.html
+++ b/src/main/resources/templates/view/cafe/cafeDetail.html
@@ -23,6 +23,11 @@
                     </div>
                 </div>
 
+                <div class="flex justify-center gap-3">
+                    <i class="mt-4 fa-solid fa-person fa-lg"></i>
+                    <p class="mb-4 text-xl text-bold" th:text="${memberCount} + '/' +${memberLimit}"></p>
+                </div>
+
                 <!-- FIXME 로그인시에만 가입하기 버튼 보여야함-->
                 <div class="flex justify-center" th:unless="${isJoin}">
                     <a class="btn btn-primary" th:href="|/cafeMember/join?id=${cafe.id}|">가입하기</a>
@@ -35,8 +40,7 @@
 
             </div>
             <div>
-                <img src="https://kr.object.ncloudstorage.com/calocheck/sample/sample_img_no.png"
-                     class="w-2/3 rounded-lg shadow-2xl"/>
+                <img th:src="${cafe.imgUrl}" class="w-2/3 rounded-lg shadow-2xl"/>
             </div>
         </div>
     </div>
@@ -74,7 +78,7 @@
             <div class="flex justify-center my-4">
                 <p class="font-sans text-3xl font-bold">게시글 리스트</p>
             </div>
-            <div class="ml-10 mb-10 grid grid-cols-1 md:grid-cols-3 xl:grid-cols-3 gap-[30px]" >
+            <div class="ml-10 mb-10 grid grid-cols-1 md:grid-cols-3 xl:grid-cols-3 gap-[30px]">
                 <div th:each="post:${postList}" class="card w-72 bg-neutral text-neutral-content">
                     <div class="card-body items-center text-center">
                         <h2 class="card-title" th:text="${post.postTitle}"></h2>
@@ -95,7 +99,6 @@
             </div>
         </div>
     </div>
-
 
 
     <script th:inline="javascript" th:if="${failMsg}">
