이미지 상대경로 처리

--- a/src/main/resources/templates/view/cafe/createForm.html
+++ b/src/main/resources/templates/view/cafe/createForm.html
@@ -16,7 +16,7 @@
                       class="textarea textarea-bordered textarea-lg w-full"></textarea>
 
             <div class="mt-10 flex justify-center">
-                <span class="mt-4 w-48">카페 이미지(구현 X)</span>
+                <span class="mt-4 w-48">대표 이미지</span>
                 <input type="file" class="file-input file-input-bordered file-input-secondary w-full max-w-xs"
                        name="cafeImg"/>
             </div>
