개인자습 1차 마무리

--- a/src/main/resources/templates/view/cafe/cafeDetail.html
+++ b/src/main/resources/templates/view/cafe/cafeDetail.html
@@ -39,7 +39,7 @@
                 </div>
 
             </div>
-            <div>
+            <div class="w-96 h-72">
                 <img th:src="${cafe.imgUrl}" class="w-2/3 rounded-lg shadow-2xl"/>
             </div>
         </div>
